# Codex-Shim

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
config/: config.default.toml  config.example.json  config.example.yaml
config/codex-cli/: longcat.json  mimo.json
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: ConfigEditor.tsx  ErrorBoundary.tsx  GenerationParamsPanel.tsx  ModelTable.tsx  StatCard.tsx  SummaryCard.tsx
frontend/src/lib/: cn.ts  format.ts  theme.tsx
frontend/src/pages/: ConfigPage.tsx  DashboardPage.tsx  ProvidersPage.tsx  TrcPage.tsx
src/: config.default.toml  config.rs  error.rs  keyring_store.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: main.rs
src/provider/: client.rs  manager.rs  mod.rs
src/responses/: build.rs  convert.rs  mod.rs  sse.rs  store.rs  tools.rs
src/sys_dashboard/: config_editor.rs  generation_params.rs  ledger_key.rs  mod.rs  model_stats.rs  routes.rs  trc_store.rs  usage_record.rs  usage_stats.rs  usage_store.rs
src/xiaomi/: client.rs  mod.rs  reasoning.rs  schema.rs
